[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmea2gpx"
version = "0.1"
description = "Converts NMEA files to GPX files"
license = "MIT"
authors = [
    {name = "Benjamin Bezine"}
]
urls = {Homepage = "https://github.com/bezineb5/py-nmea2gpx"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.5",
    "Topic :: Multimedia"
]
requires-python = ">=3.5"

[tool.setuptools]
py-modules = ["nmea2gpx"] 